<resources>
    <string name="app_name">Большой брат</string>
    <!-- Strings related to login -->
    <string name="prompt_email">ID пользователя</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_activity_bottom_navigation">MainActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Профиль</string>
    <string name="scenarios">Сценарии</string>
    <string name="contacts">Контакты</string>
    <string name="tracing">Отслеживание</string>
    <string name="id">ID</string>
    <string name="time">Время</string>
    <string name="status">Статус</string>
    <string name="distance">Дистанция (м)</string>
    <string name="preference_file_key">hse.bigbrother.PREFERENCE_FILE_KEY</string>
    <string name="test_name">Иванов Иван Иванович</string>
    <string name="test_job">Программный инженер</string>
    <string name="logout">Выйти</string>
    <string name="scenario_name">Название</string>
    <string name="role">Роль</string>
    <string name="test_role">Программный инженер</string>
    <string name="people_count">Колличество людей</string>
    <string name="people_count_test">3</string>
    <string name="description">Описание</string>
    <string name="test_description">Текст текст много текста очень очень много текста</string>
    <string name="test_time">10:00 – 15:00</string>
    <string name="functionality_limited">Функциональность ограниченна</string>
    <string name="app_needs_background_location_access">
        Доступ к местоположению в фоновом режиме.
    </string>
    <string name="app_needs_location_access">Доступ к местоположению.</string>
    <string name="grant_background_location_access">Пожалуйста, предоставьте доступ к
        местоположению, чтобы это приложение могло обнаруживать другие телефоны с этим приложением
        в фоновом режиме.
    </string>
    <string name="grant_location_access">Пожалуйста, предоставьте доступ к
        местоположению и доступ к местоположению в фоновом режиме, чтобы это приложение могло
        обнаруживать другие телефоны с этим приложением.
    </string>
    <string name="not_background_location_access_go_to_settings">Поскольку доступ к местоположению
        в фоновом режиме не был предоставлен, пользователь не сможет включить обнаружение.
        Пожалуйста, перейдите в настройки и предоставьте доступ к местоположению в фоновом режиме
        этому приложению.
    </string>
    <string name="not_location_access_go_to_settings">Поскольку доступ к местоположению
        не был предоставлен, пользователь не сможет включить обнаружение.
        Пожалуйста, перейдите в настройки и предоставьте доступ к местоположению и доступ к
        местоположению в фоновом режиме этому приложению.
    </string>
    <string name="not_background_location_access">Поскольку доступ к местоположению
        в фоновом режиме не был предоставлен, пользователь не сможет включить обнаружение.
    </string>
    <string name="not_location_access">Поскольку доступ к местоположению не был предоставлен,
        пользователь не сможет включить обнаружение.
    </string>
    <string name="load_error">Что-то пошло не так ...</string>
    <string name="reload">Обновить</string>
    <string name="no_network_title">Отсутствует подключение к сети</string>
    <string name="no_network_message">Для отслеживания небходимо подключение к сети.</string>
    <string name="no_location_title">Определение локации выключено</string>
    <string name="no_location_message">Для отслеживания небходимо определение локации.</string>
    <string name="no_bluetooth_title">Bluetooth выключен</string>
    <string name="no_bluetooth_message">Для отслеживания небходим Bluetooth.</string>
</resources>