<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="20dp"
    android:paddingBottom="20dp"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/scenario_name"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameTextView" />

    <TextView
        android:id="@+id/roleNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center"
        android:text="@string/role"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@android:color/black"
        app:layout_constraintHorizontal_weight="0.3"
        app:layout_constraintTop_toTopOf="@id/roleTextView"
        app:layout_constraintEnd_toStartOf="@id/roleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/roleTextView"
        />

    <TextView
        android:id="@+id/roleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:padding="20dp"
        android:gravity="center"
        tools:text="@string/test_role"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintHorizontal_weight="0.7"
        app:layout_constraintTop_toBottomOf="@id/nameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/roleNameTextView"/>

    <TextView
        android:id="@+id/timeNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center"
        android:text="@string/time"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@android:color/black"
        app:layout_constraintHorizontal_weight="0.3"
        app:layout_constraintTop_toTopOf="@id/timeTextView"
        app:layout_constraintEnd_toStartOf="@id/timeTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/timeTextView"
        />

    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:padding="20dp"
        android:gravity="center"
        tools:text="@string/test_time"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintHorizontal_weight="0.7"
        app:layout_constraintTop_toBottomOf="@id/roleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/timeNameTextView"/>

    <TextView
        android:id="@+id/peopleCountNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center"
        android:text="@string/people_count"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@android:color/black"
        app:layout_constraintHorizontal_weight="0.7"
        app:layout_constraintTop_toTopOf="@id/peopleCountTextView"
        app:layout_constraintBottom_toBottomOf="@id/peopleCountTextView"
        app:layout_constraintEnd_toStartOf="@id/peopleCountTextView"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/peopleCountTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:padding="20dp"
        android:gravity="center"
        tools:text="@string/people_count_test"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintHorizontal_weight="0.3"
        app:layout_constraintTop_toBottomOf="@id/timeTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/peopleCountNameTextView"/>

    <TextView
        android:id="@+id/statusNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:padding="20dp"
        android:gravity="center"
        android:text="@string/status"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@android:color/black"
        app:layout_constraintHorizontal_weight="0.7"
        app:layout_constraintTop_toTopOf="@id/statusImageView"
        app:layout_constraintBottom_toBottomOf="@id/statusImageView"
        app:layout_constraintEnd_toStartOf="@id/statusImageView"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/statusImageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:padding="18dp"
        android:gravity="center"
        tools:src="@drawable/ic_baseline_check_circle_32"
        app:layout_constraintHorizontal_weight="0.3"
        app:layout_constraintTop_toBottomOf="@id/peopleCountTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/statusNameTextView"/>

    <TextView
        android:id="@+id/descriptionNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:text="@string/description"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/statusImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:paddingHorizontal="20dp"
        android:paddingBottom="10dp"
        tools:text="@string/test_description"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/descriptionNameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>